--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,9 +1,14 @@
 .footer {
-    padding: 2rem;
-    text-align: center;
-    background-color: #0a0a0a;
-    color: #777;
-    font-size: 0.875rem;
-    border-top: 1px solid #222;
+  padding: 2rem 1rem;
+  text-align: center;
+  background-color: #fafafa;
+  color: #555;
+  font-size: 0.875rem;
+  border-top: 1px solid #e0e0e0;
+
+  p {
+    margin: 0;
+    font-weight: 500;
+    letter-spacing: 0.3px;
   }
-  
+}
