--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,28 +6,30 @@
 @use './footer';
 @use './navbar';
 
-
-
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+html,
+body,
+#root {
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   background-color: #0f0f0f;
   color: #ffffff;
-  scroll-behavior: smooth;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .App {
-  scroll-snap-type: y mandatory;
-  height: 100vh;
-  overflow-y: scroll;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
-html {
-    scroll-behavior: smooth;
-  }
