--- a/src/styles/_under-construction.scss
+++ b/src/styles/_under-construction.scss
@@ -1,12 +1,20 @@
 // src/styles/_under-construction.scss
 @keyframes scrollLeft {
-  0% { transform: translateX(0%); }
-  100% { transform: translateX(-100%); }
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 
 @keyframes scrollRight {
-  0% { transform: translateX(-100%); }
-  100% { transform: translateX(0%); }
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
 
 .under-construction {
@@ -37,7 +45,7 @@
       line-height: 1.2;
       opacity: 0.05;
       color: #000;
-      font-family: 'Inter', sans-serif;
+      font-family: "Inter", sans-serif;
       padding-left: 5%;
       animation-duration: 40s;
       animation-timing-function: linear;
