chore: remove unused files and clean up project structure

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,4 +8,4 @@ $text-color: #212529;
 $border-color: #dee2e6;
 
 // Fonts
-$font-family-sans-serif: 'Inter', sans-serif;
+$font-family-sans-serif: 'JetBrains Mono', 'Monaco', 'Consolas', 'Courier New', monospace;
