--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,18 @@
 
 // Gaya dasar minimal - sebagian besar ditangani oleh MUI CssBaseline
 body {
-  font-family: variables.$font-family-sans-serif; // Pertahankan font family jika ingin kustom
+  font-family: variables.$font-family-sans-serif;
+  background: #FAFAFA;
+  color: #333;
   overflow-x: hidden;
+  min-width: 0;
+  margin: 0;
+  padding: 0 1rem;
+  line-height: 1.7;
+  box-sizing: border-box;
+  @media (min-width: 600px) {
+    padding: 0 2rem;
+  }
 }
 
 // Gaya untuk elemen yang belum dimigrasi ke MUI
@@ -19,9 +29,17 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  max-width: 100vw;
 }
 
 main {
   flex: 1;
-  padding: 20px; // Pertahankan padding jika diperlukan
+  padding: 1rem 0;
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
+  @media (min-width: 600px) {
+    padding: 2rem 0;
+  }
 }
