--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,15 +13,12 @@ body {
   font-family: variables.$font-family-sans-serif;
   background: #FAFAFA;
   color: #333;
-  overflow-x: hidden;
+  overflow-x: auto;
   min-width: 0;
   margin: 0;
-  padding: 0 1rem;
+  padding: 0;
   line-height: 1.7;
   box-sizing: border-box;
-  @media (min-width: 600px) {
-    padding: 0 2rem;
-  }
 }
 
 // Gaya untuk elemen yang belum dimigrasi ke MUI
@@ -35,11 +32,8 @@ body {
 
 main {
   flex: 1;
-  padding: 1rem 0;
+  padding: 0;
   width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
-  @media (min-width: 600px) {
-    padding: 2rem 0;
-  }
 }
